# spectrogram

./: Backend_8h_source.html  Blocking_8h_source.html  Buffer_8h_source.html  CMakeLists.txt  DeviceList_8h_source.html  Device_8h_source.html  Doxyfile  Dummy_8h_source.html  README.md  Soundio_8h_source.html  System_8h_source.html  annotated.html  classSpectrogram_1_1Audio_1_1Backend_1_1Backend.html  classSpectrogram_1_1Audio_1_1Backend_1_1Dummy-members.html  classSpectrogram_1_1Audio_1_1Backend_1_1Dummy.html  classSpectrogram_1_1Audio_1_1Backend_1_1Soundio-members.html  classSpectrogram_1_1Audio_1_1Backend_1_1Soundio.html  classSpectrogram_1_1Audio_1_1DeviceList-members.html  classSpectrogram_1_1Audio_1_1DeviceList.html  classSpectrogram_1_1Audio_1_1System_1_1Blocking-members.html  classSpectrogram_1_1Audio_1_1System_1_1Blocking.html  classSpectrogram_1_1Audio_1_1System_1_1Event.html  classSpectrogram_1_1Audio_1_1System_1_1System-members.html  classSpectrogram_1_1Audio_1_1System_1_1System.html  classSpectrogram_1_1Fourier_1_1Processor.html  classes.html  dir_40ae6bcc786655727c9c413a01bb22e8.html  dir_634c91ff52fc14f32111a80b52e863d9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8a486b727ec03396959a074111ca29a8.html  dir_a563282922ec91f0dfb3d5fef99a7efc.html  dir_c5556714dd0ab7e78777070b1a118291.html  dir_d33c7774c91bea6c032c531740ceaeeb.html  dir_e7d122e5cbc99b43c133865f98668151.html  dir_f48c07c831329e841dacaf5a0675aed4.html  files.html  index.html  modules.html  namespaceSpectrogram.html  namespaceSpectrogram_1_1Audio.html  (+12 more)
.github/workflows/: build.yml  documentation.yml  main.yml
cmake/: catch2.cmake  glfw3.cmake
docs/: CMakeLists.txt  Doxyfile  mcss.cmake
docs/html/: Backend_8h_source.html  Blocking_8h_source.html  Soundio_8h_source.html  annotated.html  classSpectrogram_1_1Audio_1_1Backend_1_1Backend-members.html  classSpectrogram_1_1Audio_1_1Backend_1_1Dummy.html  classSpectrogram_1_1Audio_1_1DeviceList.html  classSpectrogram_1_1Fourier_1_1Processor-members.html  classSpectrogram_1_1Fourier_1_1Processor.html  dir_40ae6bcc786655727c9c413a01bb22e8.html  dir_634c91ff52fc14f32111a80b52e863d9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c5556714dd0ab7e78777070b1a118291.html  dir_d33c7774c91bea6c032c531740ceaeeb.html  dir_e7d122e5cbc99b43c133865f98668151.html  dir_f48c07c831329e841dacaf5a0675aed4.html  files.html  hierarchy.html  structSpectrogram_1_1Audio_1_1Device-members.html  structSpectrogram_1_1Audio_1_1Device.html
docs/html/search/: all_1.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  searchdata.js
modules/: FindGtkmm.cmake  FindLibsoundio.cmake  FindPortaudio.cmake  FindQCustomPlot.cmake  FindRtAudio.cmake  Findmcss.cmake
search/: all_0.js  all_2.js  all_4.js  classes_3.js
src/: CMakeLists.txt
src/Audio/: CMakeLists.txt  RtAudio.h  System.h  placeholder.cpp  placeholder.h
src/CLIApplication/: CMakeLists.txt  main.cpp  test.cpp
src/Fourier/: CMakeLists.txt  fourier.cpp  fourier.h  placeholder.cpp  placeholder.h
src/GLFWApplication/: CMakeLists.txt  main.cpp
src/Graphics/: CMakeLists.txt  placeholder.cpp  placeholder.h
src/GtkmmApplication/: AudioSystem.h  CMakeLists.txt  GtkmmVisualizer.h  TextSpectrumView.h  main.cpp  mainwindow.glade
src/GtkmmApplication/Visualizer/: BarSpectrumVisualizer.cpp  BarSpectrumVisualizer.h  GtkmmVisualizer.cpp  GtkmmVisualizer.h  SpectrogramVisualizer.cpp  SpectrogramVisualizer.h  SpectrumVisualizer.cpp  SpectrumVisualizer.h  TextSpectrumVisualizer.cpp  TextSpectrumVisualizer.h
src/QtApplication/: CMakeLists.txt  ECE4574_FA20_PS1.pro  QtApplication.cpp  QtApplication.h  QtAudioSystem.cpp  QtAudioSystem.h  Qt_Spectrogram.cpp  Qt_Spectrogram.h  Qt_Spectrogram.ui  main.cpp
src/QtApplication/Settings/: Settings.h
src/QtApplication/Visualizer/: QtSpectrogram.cpp  QtSpectrogram.h
src/QtGraphApplication/: CMakeLists.txt  GraphGui.cpp  GraphGui.h  QtAudioSystem.cpp  QtAudioSystem.h  main.cpp
src/QtMainApplication/: CMakeLists.txt  QtApplication.cpp  QtMainApplication.cpp  QtMainApplication.h  SpectrogramGraph.cpp  SpectrogramGraph.h  main.cpp
src/Spectrogram/: CMakeLists.txt  Spectrogram.h
src/Spectrogram/Audio/: Audio.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Device.cpp  Device.h  DeviceList.cpp  DeviceList.h  MonolithicSystem.cpp  MonolithicSystem.h  RtAudio.h  System.cpp  System.h  libsoundio.cmake
src/Spectrogram/Audio/Backend/: Backend.h  Dummy.cpp  Dummy.h  Soundio.cpp  Soundio.h
src/Spectrogram/Audio/System/: Blocking.cpp  Blocking.h  Callback.cpp  Callback.h  Event.cpp  Event.h  LibPortAudio.cpp  LibPortAudio.h  LibPulseAudio.cpp  LibPulseAudio.h  LibRtAudio.cpp  LibRtAudio.h  LibSoundio.cpp  LibSoundio.h  RtAudio.cpp  RtAudio.h  System.cpp  System.h
src/Spectrogram/Fourier/: CMakeLists.txt  FrequencyDomainBuffer.cpp  FrequencyDomainBuffer.h  Transformer.cpp  Transformer.h  processor.cpp  processor.h
src/Spectrogram/Graphics/: CMakeLists.txt  placeholder.h
src/Spectrogram/PNG/: CMakeLists.txt  Writer.cpp  Writer.h
src/Spectrogram/Settings/: CMakeLists.txt  Profile.cpp  Profile.h  Settings.cpp  Settings.h
src/Spectrogram/Visualizer/: CMakeLists.txt  QtAudioSystem.cpp  QtAudioSystem.h  QtSpectrogram.cpp  QtSpectrogram.h  Spectrum.cpp  Spectrum.h  Visualizer.h
test/: CMakeLists.txt  main.cpp  test_Audio_System.cpp  test_Fourier_Process.cpp  test_Settings.cpp
